--- a/index.html
+++ b/index.html
@@ -83,8 +83,14 @@
                     alt="Segundo Slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src=https://www.osmais.com/wallpapers/201604/natureza-praia-por-do-sol-wallpaper-1280x720.jpg alt="Terceiro Slide">
+                <img class="d-block w-100" src=https://www.osmais.com/wallpapers/201604/natureza-praia-por-do-sol-wallpaper-1280x720.jpg 
+                alt="Terceiro Slide">
             </div>
+            
+            <div class="carousel-item">
+              <img class="d-block w-100" src=https://wallpaperstock.net/praia-catarinense_wallpapers_11228_1280x720.jpg 
+              alt="Quarto Slide">
+          </div>
 
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -110,8 +116,7 @@
         
     </div>
     <!--/Jumbotron-->
-
-<div>
+  
 
     <!--Cards-->
     <div class="container">
